--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-
+PORT=8080
+MONGO_CONN="mongodb+srv://kakadritesh19:ritesh123@cluster1.clq6c.mongodb.net/sample-db?retryWrites=true&w=majority&appName=Cluster1"
+JWT_SECRET="secret-123"
